# proyecto-final/src/routes/index.js
@@ -6,6 +6,7 @@ const userRouter = require('./user');
 const ordenadorRouter = require('./ordenador');
 const facturaRouter = require('./factura');
 const componenteRouter = require('./componente');
+const { login } = require('../controllers/login');
 
 const router = express.Router();
 
@@ -15,6 +16,7 @@ router.use('/user', userRouter);
 router.use('/ordenador', ordenadorRouter);
 router.use('/factura', facturaRouter);
 router.use('/componente', componenteRouter);
+router.post('/login', login);
 
 
 module.exports = router;
